--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
-        "league/plates": "^3.6"
+        "league/plates": "^3.6",
+      "ext-pdo": "*"
     }
 }
